--- a/android/app/src/main/res/layout/gallery_item.xml
+++ b/android/app/src/main/res/layout/gallery_item.xml
@@ -12,5 +12,12 @@
         android:minHeight="100dp"
         android:src="@drawable/ic_image_placeholder" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"/>
+
 
 </android.support.v7.widget.CardView>
