--- a/android/app/src/main/res/layout/game_item.xml
+++ b/android/app/src/main/res/layout/game_item.xml
@@ -14,13 +14,37 @@
         android:layout_marginBottom="16dp"
         android:orientation="horizontal">
 
-
-        <ImageView
-            android:id="@+id/ivImage"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="120dp"
             android:layout_height="match_parent"
+            android:layout_margin="0dp"
             android:minHeight="120dp"
-            android:src="@drawable/ic_image_placeholder" />
+            android:padding="0dp">
+
+
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_image_placeholder" />
+
+            <ProgressBar
+                android:id="@+id/gameProgressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/ivImage"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ivImage" />
+
+
+        </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
